[package]
name = "cipolla"
authors = ["Mark Hähnel <hello@markhaehnel.de>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/markhaehnel/cipolla-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
arti-client = { version = "0.12.0", features = ["geoip", "static-sqlite"] }
axum = { version = "0.6.20" }
clap = { version = "4.4.11", features = ["cargo", "derive"] }
hyper = { version = "0.14.27" }
tokio = { version = "1.34.0", features = ["full"] }
tor-geoip = "0.1.3"
tor-rtcompat = { version = "0.9.6" }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.2"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
