[package]
name = "cipolla"
authors = ["Mark Hähnel <hello@markhaehnel.de>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/markhaehnel/cipolla-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.77" }
arti-client = { version = "0.12.0", features = ["geoip", "static-sqlite"] }
bytes = { version = "1.5.0" }
clap = { version = "4.4.11", features = ["cargo", "derive"] }
http-body-util = { version = "0.1.0" }
hyper = { version = "1.1.0", features = [
  "server",
  "http1",
], default-features = false }
hyper-util = { version = "0.1.2", features = ["tokio", "server", "full"] }
tokio = { version = "1.35.1", default-features = false, features = ["macros"] }
tor-geoip = { version = "0.1.3" }
tor-rtcompat = { version = "0.9.6" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.2"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
